--- a/templates/index.html
+++ b/templates/index.html
@@ -1,11 +1,62 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Flask Job app</title>
+    <title>Flask Job Form</title>
+
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+
 </head>
+
 <body>
-    
+    <main class="container">
+        <h1 class="my-3">Job Application Form</h1>
+        <form method="post">
+            <div class="mb-3">
+                <label for="first_name">First Name:</label>
+                <input type="text" class="form-control" name="first_name" id="first_name">
+            </div>
+            <div class="mb-3">
+                <label for="last_name">Last Name:</label>
+                <input type="text" class="form-control" name="last_name" id="last_name">
+            </div>
+            <div class="mb-3">
+                <label for="email">Email:</label>
+                <input type="email" class="form-control" name="email" id="email">
+            </div>
+            <div class="mb-3">
+                <label for="date">Date:</label>
+                <input type="date" class="form-control" name="date" id="date">
+            </div>
+            <div class="mb-3">
+                <label>Current Occupation: </label>
+                <br>
+                <div id="occupation">
+                    <input type="radio" class="btn-check form-control" name="occupation" value="employed" id="employed">
+                    <label class="btn btn-outline-dark" for="employed">Employed</label>
+
+                    <input type="radio" class="btn-check form-control" name="occupation" value="unemployed" id="unemployed">
+                    <label class="btn btn-outline-dark" for="unemployed">Unemployed</label>
+
+                    <input type="radio" class="btn-check form-control" name="occupation" value="self-employed" id="selfemployed">
+                    <label class="btn btn-outline-dark" for="selfemployed">Self-Employed</label>
+
+                    <input type="radio" class="btn-check form-control" name="occupation" value="student" id="student">
+                    <label class="btn btn-outline-dark" for="student">Student</label>
+                </div>
+            </div>
+            <div class="mb-3">
+                <button class="btn btn-secondary" type="submit">Submit</button>
+            </div>
+        </form>
+    </main>
 </body>
+
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+    crossorigin="anonymous"></script>
+
 </html>
