--- a/templates/index.html
+++ b/templates/index.html
@@ -51,6 +51,15 @@
             <div class="mb-3">
                 <button class="btn btn-secondary" type="submit">Submit</button>
             </div>
+            {% with messages = get_flashed_messages() %}
+            {% if messages %}
+            <div class="mb-3 alert alert-success">
+                {% for message in messages %}
+                {{ message }}
+                {% endfor %}
+            </div>
+            {% endif %}
+            {% endwith %}
         </form>
     </main>
 </body>
